# ai-auto-export

./: .gitignore  ARCHITECTURE.md  PACKAGING.md  PLAN.md  README.md  package-lock.json  package.json  test-electron.js  test-out.txt  test-package.json  ws_test.py
backend/: .env.example  pyproject.toml  sidecar.spec  sidecar_entry.py
backend/app/: config.py  logging_setup.py  main.py
backend/app/agents/: asset_agent.py  graph.py  idea_agent.py  scene_agent.py  state.py  story_planner.py
backend/app/api/: health.py  ideas.py  render.py  ws.py
backend/app/models/: job.py
backend/app/providers/assets/: __init__.py  base.py  mock.py  pexels.py  pixabay.py  unsplash.py
backend/app/providers/llm/: __init__.py  base.py  gemini.py  mock.py
backend/app/renderer/: beat_sync.py  ffmpeg_encoder.py  html_renderer.py  job_queue.py  music_selector.py  output_validator.py  subtitle.py  template_validator.py  timeline.py
backend/app/services/: event_bus.py  job_manager.py
backend/app/templates/cinematic/: README.md
backend/app/templates/documentary/: README.md
backend/app/templates/explainer/: README.md
backend/app/templates/news/: README.md
backend/app/templates/story/: README.md
backend/app/templates/viral/: index.html  scene.js  style.css
backend/app/utils/: lang.py  slug.py
backend/logs/: server.err
backend/temp/job_9a234ea6/: subs.ass
backend/tests/: test_audio_model.py  test_beat_sync.py  test_health.py  test_music_selector.py  test_output_validator.py  test_slug.py  test_template_contract.py  test_template_visual.py  test_timeline.py
(+34 files in other folders)
