[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-keyword-video-factory-backend"
version = "0.1.0"
description = "FastAPI sidecar for AI Keyword Video Factory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "unidecode>=1.3.8",
    "python-slugify>=8.0.4",
    "playwright>=1.48.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
